# day-tripper

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  daily.yml  post-close.yml  pre-close.yml  pre-open.yml  tests.yml
allocation/: __init__.py  equal_weight.py
dashboard/: __init__.py  render.py
data/: __init__.py  cache.py  providers.py  universe.py
daytripper/: __init__.py  board.py  costs.py  dashboard.py  demo.py  engine.py  prices.py  strategy.py
daytripper/data/: __init__.py  providers.py
daytripper/loop/: __init__.py  run.py
docs/: DESIGN.md  LOOP.md  board.csv  index.html
engine/: __init__.py  backtest.py  costs.py
loop/: __init__.py  cli.py  runner.py  state.py
scorer/: __init__.py  baseline.py  metrics.py
state/: README.md
strategies/: __init__.py  library.py  spec.py
strategies/specs/: intraday_reversion_long.yaml  overnight_momentum_long.yaml
tests/: conftest.py  test_board.py  test_capital.py  test_costs.py  test_dashboard.py  test_data.py  test_engine.py  test_lookahead.py  test_loop.py  test_regime.py  test_selection.py
